--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </div>
       </nav>
 
-      <div id="announcementModal" class="modal" role="dialog">
+      <div id="announcementModal" class="modal" role="dialog" style="display:flex; align-content: center;" >
         <div class="modal-dialog modal-lg" role="content">
-            <div class="modal-content">
+            <div class="modal-content" style="max-width: 500px;">
                 <div class="modal-header" style="background:initial;">
                     <h4 class="modal-title"></h4>
                     <button type="button" class="close" data-dismiss="modal" style="width:initial; height:initial">&times;</button>
@@ -67,7 +67,7 @@
                 <div class="modal-body">
                    <div class="row">
                      <div class="col">
-                      <img class="img-fluid" src="./images/announcement.jpeg"  >
+                      <img class="img-fluid" src="./images/announcement.jpeg" style="max-height: 600px;" >
                      </div>
                    </div>
                 </div>
@@ -176,10 +176,9 @@
                       </div>
                   <div class="col-12 col-lg-6">
                     <p align="justify" style="font-family: 'Roboto', sans-serif;">
-                      Imprints,with a touch of heart,is a humanitarian initiative of the student body of Calicut Medical College along with the Department of Pediatrics of Calicut Medical College. It was launched in 2012 to cater medical and financial needs of the economically poor kids suffering from Type 1 Diabetes, Wilson's Disease and Thalassemia and other diseases keeping their joyful childhood at bay. Since it's establishment Imprints has been a blessing for a large number of parents hammering away to find means to support their child fight their battle.
-                    </p>
-                    <p align="justify" class="d-none d-md-block" style="font-family: 'Roboto', sans-serif;">At present Imprints provide for 58 children with Type 1 Diabetes,16 children with Thalassemia and 7 children with Neuro Wilson's. We would like to expand the ambit of our caring ways to embrace a larger population and also requires your support to do so. This pandemic time has been difficult for everyone and we can't let it stop us from doing things that make us more human.
-                    </p>
+                      Imprints,with a touch of heart,is a humanitarian initiative of the College Union-2012  of Calicut Medical College.It was launched in 2012 to cater medical and financial needs of  economically poor children suffering from Type 1 Diabetes, Wilson's Disease and Thalassemia and other diseases keeping their joyful childhood at bay. Since it's establishment Imprints has been a blessing for a large number of parents hammering away to find means to support their child fight their battle.Along with Department of Pediatrics we have been able to fulfill the dreams of hundreds of children in these past 8 years.
+Currently Imprints is a Registered society(Reg.No-KKD/CA/718/2017)and the initiative is steered by the students and faculties of the Calicut Medical college.                    </p>
+                    <p align="justify" class="d-none d-md-block" style="font-family: 'Roboto', sans-serif;">We would like to expand the ambit of our caring ways to embrace a larger population and it requires your support to do so. We expect your cooperation and support in whatever form it maybe to help us continue this noble task.                    </p>
                   </div>
                 </div>
             </div>
@@ -267,8 +266,8 @@
                         <center>
                         <div class="box">
                           <span style="--i:1;"><img src="gallery/img1.jpeg"></span>
-                          <span style="--i:2;"><img src="gallery/img2.jpg"></span>
-                          <span style="--i:3;"><img src="gallery/img3.jpeg"></span>
+                          <span style="--i:2;"><img src="gallery/img2.jpeg"></span>
+                          <span style="--i:3;"><img src="gallery/img3.jpg"></span>
                           <span style="--i:4;"><img src="gallery/img4.jpg"></span>
                           <span style="--i:5;"><img src="gallery/img5.jpg"></span>
                           <span style="--i:6;"><img src="gallery/img6.jpg"></span>
@@ -276,12 +275,12 @@
                           <span style="--i:8;"><img src="gallery/img8.jpg"></span>
                           <span style="--i:9;"><img src="gallery/img9.jpg"></span>
                           <span style="--i:10;"><img src="gallery/img10.jpg"></span>
-                          <span style="--i:11;"><img src="gallery/img11.jpg"></span>
-                          <span style="--i:12;"><img src="gallery/img12.jpg"></span>
-                          <span style="--i:13;"><img src="gallery/img13.jpeg"></span>
+                          <span style="--i:11;"><img src="gallery/img11.jpeg"></span>
+                          <span style="--i:12;"><img src="gallery/img12.jpeg"></span>
+                          <span style="--i:13;"><img src="gallery/img13.jpg"></span>
                           <span style="--i:14;"><img src="gallery/img14.jpeg"></span>
                           <span style="--i:15;"><img src="gallery/img15.jpg"></span>
-                          <span style="--i:15;"><img src="gallery/img16.jpeg"></span>
+                          <span style="--i:15;"><img src="gallery/img16.jpg"></span>
                         </div>            
                         </center>            
                     </div>
@@ -301,13 +300,13 @@
                     </div>
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img2.jpg"
+                        <img class="img-fluid hoverable" src="./gallery/img2.jpeg"
                           alt="Card image cap">
                       </div>
                     </div>
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img3.jpeg"
+                        <img class="img-fluid hoverable" src="./gallery/img3.jpg"
                           alt="Card image cap">
                       </div>
                     </div>
@@ -357,19 +356,19 @@
                     </div>
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img11.jpg"
+                        <img class="img-fluid hoverable" src="./gallery/img11.jpeg"
                           alt="Card image cap">
                       </div>
                     </div>
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img12.jpg"
+                        <img class="img-fluid hoverable" src="./gallery/img12.jpeg"
                           alt="Card image cap">
                       </div>
                     </div>
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img13.jpeg"
+                        <img class="img-fluid hoverable" src="./gallery/img13.jpg"
                           alt="Card image cap">
                       </div>
                     </div>
@@ -387,7 +386,7 @@
                     </div>
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img16.jpeg"
+                        <img class="img-fluid hoverable" src="./gallery/img16.jpg"
                           alt="Card image cap">
                       </div>
                     </div>
