--- a/index.html
+++ b/index.html
@@ -143,26 +143,32 @@
     <div id="fullPage">
 
 
-        <div class="section" id="main" style="background: url('./images/img1.png')">
-            <div style="height: 100vh; background-color: rgba(255, 255, 255, 0.774);">
-                <div class="container d-flex h-100">
-                    <div class="row d-none d-md-block align-self-center" >
-                      <div class="col-12 zoom " >
-                        <img class="img-fluid" src="./images/IMPRINTS LOGO (1).png" >
-                      </div>
-                    </div>
-                    <div class="row d-block d-md-none align-self-center">
-                      <div class="col-4 offset-4 zoom">
-                        <img class="img-fluid" src="./images/Fingerprint.png" height="150px">
-                      </div>
-                        <div class="col-12 zoom impcor" >
-                        <img class="img-fluid" src="./images/bgxs.png"  >
-                      </div>
-                    </div>
- 
+      <div class="section" id="main" style="background: url('./images/img1.png')">
+        <div style="height: 100vh; background-color: rgba(255, 255, 255, 0.774);">
+            <div class="container d-flex h-100">
+                <div class="row d-none d-md-block align-self-center" >
+                  <div class="col-12 zoom " >
+                    <img class="img-fluid" src="./images/IMPRINTS LOGO (1).png" >
+                  </div>
+                  <div class="col-12 text-center" >
+                    <h2 >NCORE All india PG entrance mock test - <span style="color: red;">Registration opening soon</span></h2>
+                  </div>
                 </div>
+                <div class="row d-block d-md-none align-self-center">
+                  <div class="col-4 offset-4 zoom">
+                    <img class="img-fluid" src="./images/Fingerprint.png" height="150px">
+                  </div>
+                    <div class="col-12 zoom impcor" >
+                    <img class="img-fluid" src="./images/bgxs.png"  >
+                  </div>
+                  <div class="col-12 text-center mt-3" >
+                  <h5>NCORE All india PG entrance mock test - <span style="color: red;">Registration opening soon</span></h5>
+                </div>
+                </div>
+
             </div>
         </div>
+    </div>
 
 
         <div class="section">
