--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <img class="img-fluid" src="./images/bgxs.png"  >
                   </div>
                   <div class="col-12 text-center mt-3" >
-                  <h5>NCORE All india PG entrance mock test - <span><a style="color: red !important;" href="#ncore">Registration Now</a></span></h5>
+                  <h5>NCORE All india PG entrance mock test - <span><a style="color: red !important;" href="#ncore">Register Now</a></span></h5>
                 </div>
                 </div>
 
