--- a/index.html
+++ b/index.html
@@ -563,6 +563,13 @@ Currently Imprints is a Registered society(Reg.No-KKD/CA/718/2017)and the initia
                           </a>                             
                       </div>
                     </div>
+                    <div class="row policylinks text-center">
+                      <div class="col text-center">
+                      <a href="./PolicyDocuments/PRIVACY NOTICE.pdf">Privacy Policy</a>&emsp;
+                      <a href="./PolicyDocuments/T&C.pdf">T & C</a>&emsp;
+                      <a href="./PolicyDocuments/Return policy.PDF">Return Policy</a>
+                    </div>
+                    </div>
                   </div>
                 </div>
               </div> 
@@ -599,9 +606,11 @@ Currently Imprints is a Registered society(Reg.No-KKD/CA/718/2017)and the initia
                       </button>
                     </a>
                   </div>
-                  <div class="col-12 col-md-3 order-md-first" style="color: rgb(22, 160, 132); margin-top: auto; margin-bottom: auto;">
+                  <div class="col-12 col-md-3 order-md-first " style="color: rgb(22, 160, 132); margin-top: auto; margin-bottom: auto;">
                     Copyright <i class="fa fa-copyright"></i> Tensors 2020
                   </div> 
+                </div>
+                <div class="row">
                 </div>
               </footer>
             </div>       
