--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <img class="img-fluid" src="./images/IMPRINTS LOGO (1).png" >
                   </div>
                   <div class="col-12 text-center" >
-                    <h2 >NCORE All india PG entrance mock test - <span><a style="color: red !important;" href="#ncore">Register Now</a></span></h2>
+                    <h2 >NCORE All india PG entrance mock test - <span style="color: red !important;">Registration Closed</span></h2>
                   </div>
                 </div>
                 <div class="row d-block d-md-none align-self-center">
@@ -224,7 +224,7 @@ Currently Imprints is a Registered society(Reg.No-KKD/CA/718/2017)and the initia
               <img class="img-fluid" src="./images/logos.png">
             </div>
             <div class="col-12 text-center">
-              <button type="button" class="fp-controlArrow fp-next btn" style=" background-color: #f11045; color: white; ">Register Now</button>
+              <button type="button" class="fp-controlArrow fp-next btn" style=" background-color: #f11045; color: white; "disabled>Registration Closed</button>
             </div>
           </div>
         </div>
