--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ Currently Imprints is a Registered society(Reg.No-KKD/CA/718/2017)and the initia
         </div>
       </div>
       
-      <div class="slide instructions">
+      <!-- <div class="slide instructions">
         <div class="row">
           <div class="col-12 text-right d-none d-md-block">
             <button type="button" class="fp-controlArrow fp-prev btn" style="background-color: #10cff1; ">Back</button>
@@ -266,7 +266,7 @@ Currently Imprints is a Registered society(Reg.No-KKD/CA/718/2017)and the initia
               <button type="button" class="fp-controlArrow fp-prev btn" style="background-color: #10cff1; ">Back</button>
             </div>
         </div> 
-     </div> 
+     </div>  -->
     </div>
   </div> 
 </div>       
